# TuxPulse2

./: .gitignore  LICENSE  README.md  README_PACKAGING.md  build_all.sh  build_deb.sh  deploy_local.sh  metadata.json  package-lock.json  package.json  tsconfig.json
.flatpak-builder/checksums/: x86_64-org.tuxpulse.TuxPulse.json
.github/workflows/: build-arch-package.yml
scripts/: apply-maintenance-header-fix.mjs  build_arch_package.sh  sync-version.mjs
src/: App.tsx  App.tsx.bak-force-remove-header-tx  App.tsx.bak-maintenance-finish-fix  App.tsx.bak-maintenance-header-fix  App.tsx.bak-maintenance-live-output  App.tsx.bak-remove-header-tx  App.tsx.bak-update-check-v607  index.css  version.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  main.rs.bak-maintenance-live-output  main.rs.bak-single-auth-maintenance
src/constants/: apps.ts
system_files/: com.eoliann.tuxpulse.policy  server.js  tuxpulse-helper.service  tuxpulse-launcher.sh  tuxpulse_helper_secure.py
system_files/flatpak/: org.tuxpulse.TuxPulse.json
tuxpulse2-version-sync-fix/: README_VERSION_SYNC.md  apply-version-sync-fix.sh
